@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2009, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -74,17 +74,17 @@ import jdk.internal.module.ModuleInfo;
  * #read(InputStream,Supplier) read} methods defined here. </p>
  *
  * <p> A module descriptor describes a <em>normal</em>, open, or automatic
- * module. <em>Normal</em> modules and open modules describe their {@link
+ * module. <em>Normal</em> modules and open modules describe their {@linkplain
  * #requires() dependences}, {@link #exports() exported-packages}, the services
- * that they {@link #uses() use} or {@link #provides() provide}, and other
- * components. <em>Normal</em> modules may {@link #opens() open} specific
- * packages. The module descriptor for an open modules does not declare any
+ * that they {@linkplain #uses() use} or {@linkplain #provides() provide}, and other
+ * components. <em>Normal</em> modules may {@linkplain #opens() open} specific
+ * packages. The module descriptor for an open module does not declare any
  * open packages (its {@code opens} method returns an empty set) but when
  * instantiated in the Java virtual machine then it is treated as if all
  * packages are open. The module descriptor for an automatic module does not
  * declare any dependences (except for the mandatory dependency on {@code
  * java.base}), and does not declare any exported or open packages. Automatic
- * module receive special treatment during resolution so that they read all
+ * modules receive special treatment during resolution so that they read all
  * other modules in the configuration. When an automatic module is instantiated
  * in the Java virtual machine then it reads every unnamed module and is
  * treated as if all packages are exported and open. </p>
@@ -94,7 +94,6 @@ import jdk.internal.module.ModuleInfo;
  *
  * @see java.lang.Module
  * @since 9
- * @spec JPMS
  */
 
 public class ModuleDescriptor
@@ -106,9 +105,8 @@ public class ModuleDescriptor
      *
      * @see ModuleDescriptor#modifiers()
      * @since 9
-     * @spec JPMS
      */
-    public static enum Modifier {
+    public enum Modifier {
         /**
          * An open module. An open module does not declare any open packages
          * but the resulting module is treated as if all packages are open.
@@ -137,14 +135,13 @@ public class ModuleDescriptor
 
 
     /**
-     * <p> A dependence upon a module </p>
+     * <p> A dependence upon a module. </p>
      *
      * @see ModuleDescriptor#requires()
      * @since 9
-     * @spec JPMS
      */
 
-    public final static class Requires
+    public static final class Requires
         implements Comparable<Requires>
     {
 
@@ -153,9 +150,8 @@ public class ModuleDescriptor
          *
          * @see Requires#modifiers()
          * @since 9
-         * @spec JPMS
          */
-        public static enum Modifier {
+        public enum Modifier {
 
             /**
              * The dependence causes any module which depends on the <i>current
@@ -191,12 +187,7 @@ public class ModuleDescriptor
 
         private Requires(Set<Modifier> ms, String mn, Version v, String vs) {
             assert v == null || vs == null;
-            if (ms.isEmpty()) {
-                ms = Collections.emptySet();
-            } else {
-                ms = Collections.unmodifiableSet(EnumSet.copyOf(ms));
-            }
-            this.mods = ms;
+            this.mods = Set.copyOf(ms);
             this.name = mn;
             this.compiledVersion = v;
             this.rawCompiledVersion = vs;
@@ -325,10 +316,8 @@ public class ModuleDescriptor
          */
         @Override
         public boolean equals(Object ob) {
-            if (!(ob instanceof Requires))
-                return false;
-            Requires that = (Requires)ob;
-            return name.equals(that.name) && mods.equals(that.mods)
+            return (ob instanceof Requires that)
+                    && name.equals(that.name) && mods.equals(that.mods)
                     && Objects.equals(compiledVersion, that.compiledVersion)
                     && Objects.equals(rawCompiledVersion, that.rawCompiledVersion);
         }
@@ -369,17 +358,15 @@ public class ModuleDescriptor
         }
     }
 
-
 
     /**
      * <p> A package exported by a module, may be qualified or unqualified. </p>
      *
      * @see ModuleDescriptor#exports()
      * @since 9
-     * @spec JPMS
      */
 
-    public final static class Exports
+    public static final class Exports
         implements Comparable<Exports>
     {
 
@@ -388,9 +375,8 @@ public class ModuleDescriptor
          *
          * @see Exports#modifiers()
          * @since 9
-         * @spec JPMS
          */
-        public static enum Modifier {
+        public enum Modifier {
 
             /**
              * The export was not explicitly or implicitly declared in the
@@ -414,14 +400,9 @@ public class ModuleDescriptor
          * Constructs an export
          */
         private Exports(Set<Modifier> ms, String source, Set<String> targets) {
-            if (ms.isEmpty()) {
-                ms = Collections.emptySet();
-            } else {
-                ms = Collections.unmodifiableSet(EnumSet.copyOf(ms));
-            }
-            this.mods = ms;
+            this.mods = Set.copyOf(ms);
             this.source = source;
-            this.targets = emptyOrUnmodifiableSet(targets);
+            this.targets = Set.copyOf(targets);
         }
 
         private Exports(Set<Modifier> ms,
@@ -554,10 +535,8 @@ public class ModuleDescriptor
          */
         @Override
         public boolean equals(Object ob) {
-            if (!(ob instanceof Exports))
-                return false;
-            Exports other = (Exports)ob;
-            return Objects.equals(this.mods, other.mods)
+            return (ob instanceof Exports other)
+                    && Objects.equals(this.mods, other.mods)
                     && Objects.equals(this.source, other.source)
                     && Objects.equals(this.targets, other.targets);
         }
@@ -589,10 +568,9 @@ public class ModuleDescriptor
      *
      * @see ModuleDescriptor#opens()
      * @since 9
-     * @spec JPMS
      */
 
-    public final static class Opens
+    public static final class Opens
         implements Comparable<Opens>
     {
         /**
@@ -600,9 +578,8 @@ public class ModuleDescriptor
          *
          * @see Opens#modifiers()
          * @since 9
-         * @spec JPMS
          */
-        public static enum Modifier {
+        public enum Modifier {
 
             /**
              * The open package was not explicitly or implicitly declared in
@@ -623,17 +600,12 @@ public class ModuleDescriptor
         private final Set<String> targets;  // empty if unqualified export
 
         /**
-         * Constructs an Opens
+         * Constructs an {@code Opens}.
          */
         private Opens(Set<Modifier> ms, String source, Set<String> targets) {
-            if (ms.isEmpty()) {
-                ms = Collections.emptySet();
-            } else {
-                ms = Collections.unmodifiableSet(EnumSet.copyOf(ms));
-            }
-            this.mods = ms;
+            this.mods = Set.copyOf(ms);
             this.source = source;
-            this.targets = emptyOrUnmodifiableSet(targets);
+            this.targets = Set.copyOf(targets);
         }
 
         private Opens(Set<Modifier> ms,
@@ -655,9 +627,9 @@ public class ModuleDescriptor
         }
 
         /**
-         * Returns {@code true} if this is a qualified opens.
+         * Returns {@code true} if this is a qualified {@code Opens}.
          *
-         * @return {@code true} if this is a qualified opens
+         * @return {@code true} if this is a qualified {@code Opens}
          */
         public boolean isQualified() {
             return !targets.isEmpty();
@@ -673,19 +645,19 @@ public class ModuleDescriptor
         }
 
         /**
-         * For a qualified opens, returns the non-empty and immutable set
+         * For a qualified {@code Opens}, returns the non-empty and immutable set
          * of the module names to which the package is open. For an
-         * unqualified opens, returns an empty set.
+         * unqualified {@code Opens}, returns an empty set.
          *
          * @return The set of target module names or for an unqualified
-         *         opens, an empty set
+         *         {@code Opens}, an empty set
          */
         public Set<String> targets() {
             return targets;
         }
 
         /**
-         * Compares this module opens to another.
+         * Compares this module {@code Opens} to another.
          *
          * <p> Two {@code Opens} objects are compared by comparing the package
          * names lexicographically. Where the packages names are equal then the
@@ -701,11 +673,11 @@ public class ModuleDescriptor
          * set. </p>
          *
          * @param  that
-         *         The module opens to compare
+         *         The module {@code Opens} to compare
          *
          * @return A negative integer, zero, or a positive integer if this module
-         *         opens is less than, equal to, or greater than the given
-         *         module opens
+         *         {@code Opens} is less than, equal to, or greater than the given
+         *         module {@code Opens}
          */
         @Override
         public int compareTo(Opens that) {
@@ -731,14 +703,14 @@ public class ModuleDescriptor
         }
 
         /**
-         * Computes a hash code for this module opens.
+         * Computes a hash code for this module {@code Opens}.
          *
          * <p> The hash code is based upon the modifiers, the package name,
-         * and for a qualified opens, the set of modules names to which the
+         * and for a qualified {@code Opens}, the set of modules names to which the
          * package is opened. It satisfies the general contract of the
          * {@link Object#hashCode Object.hashCode} method.
          *
-         * @return The hash-code value for this module opens
+         * @return The hash-code value for this module {@code Opens}
          */
         @Override
         public int hashCode() {
@@ -748,7 +720,7 @@ public class ModuleDescriptor
         }
 
         /**
-         * Tests this module opens for equality with the given object.
+         * Tests this module {@code Opens} for equality with the given object.
          *
          * <p> If the given object is not an {@code Opens} then this method
          * returns {@code false}. Two {@code Opens} objects are equal if their
@@ -766,12 +738,10 @@ public class ModuleDescriptor
          */
         @Override
         public boolean equals(Object ob) {
-            if (!(ob instanceof Opens))
-                return false;
-            Opens other = (Opens)ob;
-            return Objects.equals(this.mods, other.mods)
-                    && Objects.equals(this.source, other.source)
-                    && Objects.equals(this.targets, other.targets);
+           return (ob instanceof Opens other)
+                   && Objects.equals(this.mods, other.mods)
+                   && Objects.equals(this.source, other.source)
+                   && Objects.equals(this.targets, other.targets);
         }
 
         /**
@@ -795,10 +765,9 @@ public class ModuleDescriptor
      *
      * @see ModuleDescriptor#provides()
      * @since 9
-     * @spec JPMS
      */
 
-    public final static class Provides
+    public static final class Provides
         implements Comparable<Provides>
     {
         private final String service;
@@ -806,7 +775,7 @@ public class ModuleDescriptor
 
         private Provides(String service, List<String> providers) {
             this.service = service;
-            this.providers = Collections.unmodifiableList(providers);
+            this.providers = List.copyOf(providers);
         }
 
         private Provides(String service, List<String> providers, boolean unused) {
@@ -831,7 +800,7 @@ public class ModuleDescriptor
         public List<String> providers() { return providers; }
 
         /**
-         * Compares this provides to another.
+         * Compares this {@code Provides} to another.
          *
          * <p> Two {@code Provides} objects are compared by comparing the fully
          * qualified class name of the service type lexicographically. Where the
@@ -845,8 +814,9 @@ public class ModuleDescriptor
          * @param  that
          *         The {@code Provides} to compare
          *
-         * @return A negative integer, zero, or a positive integer if this provides
-         *         is less than, equal to, or greater than the given provides
+         * @return A negative integer, zero, or a positive integer if this
+         *         {@code Provides} is less than, equal to, or greater than
+         *         the given {@code Provides}
          */
         public int compareTo(Provides that) {
             if (this == that) return 0;
@@ -871,7 +841,7 @@ public class ModuleDescriptor
         }
 
         /**
-         * Computes a hash code for this provides.
+         * Computes a hash code for this {@code Provides}.
          *
          * <p> The hash code is based upon the service type and the set of
          * providers. It satisfies the general contract of the {@link
@@ -885,7 +855,7 @@ public class ModuleDescriptor
         }
 
         /**
-         * Tests this provides for equality with the given object.
+         * Tests this {@code Provides} for equality with the given object.
          *
          * <p> If the given object is not a {@code Provides} then this method
          * returns {@code false}. Two {@code Provides} objects are equal if the
@@ -902,17 +872,15 @@ public class ModuleDescriptor
          */
         @Override
         public boolean equals(Object ob) {
-            if (!(ob instanceof Provides))
-                return false;
-            Provides other = (Provides)ob;
-            return Objects.equals(this.service, other.service) &&
-                    Objects.equals(this.providers, other.providers);
+            return (ob instanceof Provides other)
+                    && Objects.equals(this.service, other.service)
+                    && Objects.equals(this.providers, other.providers);
         }
 
         /**
-         * Returns a string describing this provides.
+         * Returns a string describing this {@code Provides}.
          *
-         * @return A string describing this provides
+         * @return A string describing this {@code Provides}
          */
         @Override
         public String toString() {
@@ -921,7 +889,6 @@ public class ModuleDescriptor
 
     }
 
-
 
     /**
      * A module's version string.
@@ -969,10 +936,9 @@ public class ModuleDescriptor
      *
      * @see ModuleDescriptor#version()
      * @since 9
-     * @spec JPMS
      */
 
-    public final static class Version
+    public static final class Version
         implements Comparable<Version>
     {
 
@@ -1270,18 +1236,18 @@ public class ModuleDescriptor
         this.name = name;
         this.version = version;
         this.rawVersionString = rawVersionString;
-        this.modifiers = emptyOrUnmodifiableSet(modifiers);
+        this.modifiers = Set.copyOf(modifiers);
         this.open = modifiers.contains(Modifier.OPEN);
         this.automatic = modifiers.contains(Modifier.AUTOMATIC);
         assert (requires.stream().map(Requires::name).distinct().count()
                 == requires.size());
-        this.requires = emptyOrUnmodifiableSet(requires);
-        this.exports = emptyOrUnmodifiableSet(exports);
-        this.opens = emptyOrUnmodifiableSet(opens);
-        this.uses = emptyOrUnmodifiableSet(uses);
-        this.provides = emptyOrUnmodifiableSet(provides);
+        this.requires = Set.copyOf(requires);
+        this.exports = Set.copyOf(exports);
+        this.opens = Set.copyOf(opens);
+        this.uses = Set.copyOf(uses);
+        this.provides = Set.copyOf(provides);
 
-        this.packages = emptyOrUnmodifiableSet(packages);
+        this.packages = Set.copyOf(packages);
         this.mainClass = mainClass;
     }
 
@@ -1351,7 +1317,7 @@ public class ModuleDescriptor
      * <p> Returns {@code true} if this is an automatic module. </p>
      *
      * <p> This method is equivalent to testing if the set of {@link #modifiers()
-     * modifiers} contains the {@link Modifier#OPEN AUTOMATIC} modifier. </p>
+     * modifiers} contains the {@link Modifier#AUTOMATIC AUTOMATIC} modifier. </p>
      *
      * @return  {@code true} if this is an automatic module
      */
@@ -1437,7 +1403,7 @@ public class ModuleDescriptor
 
     /**
      * <p> Returns the string with the possibly-unparseable version of the
-     * module </p>
+     * module. </p>
      *
      * @return The string containing the version of the module or an empty
      *         {@code Optional} if the module does not have a version
@@ -1509,7 +1475,7 @@ public class ModuleDescriptor
      * <p> The module names, package names, and class names that are parameters
      * specified to the builder methods are the module names, package names,
      * and qualified names of classes (in named packages) as defined in the
-     * <cite>The Java&trade; Language Specification</cite>. </p>
+     * <cite>The Java Language Specification</cite>. </p>
      *
      * <p> Example usage: </p>
      * <pre>{@code    ModuleDescriptor descriptor = ModuleDescriptor.newModule("stats.core")
@@ -1526,7 +1492,6 @@ public class ModuleDescriptor
      * {@link #build build} method.
      *
      * @since 9
-     * @spec JPMS
      */
     public static final class Builder {
         final String name;
@@ -1740,16 +1705,14 @@ public class ModuleDescriptor
                                String pn,
                                Set<String> targets)
         {
-            Exports e = new Exports(ms, pn, targets);
-
-            // check targets
-            targets = e.targets();
+            targets = new HashSet<>(targets);
             if (targets.isEmpty())
                 throw new IllegalArgumentException("Empty target set");
             if (strict) {
-                requirePackageName(e.source());
+                requirePackageName(pn);
                 targets.forEach(Checks::requireModuleName);
             }
+            Exports e = new Exports(ms, pn, targets);
             return exports(e);
         }
 
@@ -1775,7 +1738,7 @@ public class ModuleDescriptor
             if (strict) {
                 requirePackageName(pn);
             }
-            Exports e = new Exports(ms, pn, Collections.emptySet());
+            Exports e = new Exports(ms, pn, Set.of());
             return exports(e);
         }
 
@@ -1800,7 +1763,7 @@ public class ModuleDescriptor
          *         or this builder is for an automatic module
          */
         public Builder exports(String pn, Set<String> targets) {
-            return exports(Collections.emptySet(), pn, targets);
+            return exports(Set.of(), pn, targets);
         }
 
         /**
@@ -1819,7 +1782,7 @@ public class ModuleDescriptor
          *         or this builder is for an automatic module
          */
         public Builder exports(String pn) {
-            return exports(Collections.emptySet(), pn);
+            return exports(Set.of(), pn);
         }
 
         /**
@@ -1876,16 +1839,14 @@ public class ModuleDescriptor
                              String pn,
                              Set<String> targets)
         {
-            Opens opens = new Opens(ms, pn, targets);
-
-            // check targets
-            targets = opens.targets();
+            targets = new HashSet<>(targets);
             if (targets.isEmpty())
                 throw new IllegalArgumentException("Empty target set");
             if (strict) {
-                requirePackageName(opens.source());
+                requirePackageName(pn);
                 targets.forEach(Checks::requireModuleName);
             }
+            Opens opens = new Opens(ms, pn, targets);
             return opens(opens);
         }
 
@@ -1911,7 +1872,7 @@ public class ModuleDescriptor
             if (strict) {
                 requirePackageName(pn);
             }
-            Opens e = new Opens(ms, pn, Collections.emptySet());
+            Opens e = new Opens(ms, pn, Set.of());
             return opens(e);
         }
 
@@ -1935,7 +1896,7 @@ public class ModuleDescriptor
          *         builder for an open module or automatic module
          */
         public Builder opens(String pn, Set<String> targets) {
-            return opens(Collections.emptySet(), pn, targets);
+            return opens(Set.of(), pn, targets);
         }
 
         /**
@@ -1954,7 +1915,7 @@ public class ModuleDescriptor
          *         builder for an open module or automatic module
          */
         public Builder opens(String pn) {
-            return opens(Collections.emptySet(), pn);
+            return opens(Set.of(), pn);
         }
 
         /**
@@ -2027,15 +1988,12 @@ public class ModuleDescriptor
          *         declared
          */
         public Builder provides(String service, List<String> providers) {
-            Provides p = new Provides(service, providers);
-
-            // check providers after the set has been copied.
-            List<String> providerNames = p.providers();
-            if (providerNames.isEmpty())
+            providers = new ArrayList<>(providers);
+            if (providers.isEmpty())
                 throw new IllegalArgumentException("Empty providers set");
             if (strict) {
-                requireServiceTypeName(p.service());
-                providerNames.forEach(Checks::requireServiceProviderName);
+                requireServiceTypeName(service);
+                providers.forEach(Checks::requireServiceProviderName);
             } else {
                 // Disallow service/providers in unnamed package
                 String pn = packageName(service);
@@ -2043,7 +2001,7 @@ public class ModuleDescriptor
                     throw new IllegalArgumentException(service
                                                        + ": unnamed package");
                 }
-                for (String name : providerNames) {
+                for (String name : providers) {
                     pn = packageName(name);
                     if (pn.isEmpty()) {
                         throw new IllegalArgumentException(name
@@ -2051,6 +2009,7 @@ public class ModuleDescriptor
                     }
                 }
             }
+            Provides p = new Provides(service, providers);
             return provides(p);
         }
 
@@ -2282,10 +2241,8 @@ public class ModuleDescriptor
     public boolean equals(@Nullable Object ob) {
         if (ob == this)
             return true;
-        if (!(ob instanceof ModuleDescriptor))
-            return false;
-        ModuleDescriptor that = (ModuleDescriptor)ob;
-        return (name.equals(that.name)
+        return (ob instanceof ModuleDescriptor that)
+                && (name.equals(that.name)
                 && modifiers.equals(that.modifiers)
                 && requires.equals(that.requires)
                 && Objects.equals(packages, that.packages)
@@ -2582,27 +2539,6 @@ public class ModuleDescriptor
         return ModuleInfo.read(bb, null).descriptor();
     }
 
-    private static <K,V> Map<K,V> emptyOrUnmodifiableMap(Map<K,V> map) {
-        if (map.isEmpty()) {
-            return Collections.emptyMap();
-        } else if (map.size() == 1) {
-            Map.Entry<K, V> entry = map.entrySet().iterator().next();
-            return Collections.singletonMap(entry.getKey(), entry.getValue());
-        } else {
-            return Collections.unmodifiableMap(map);
-        }
-    }
-
-    private static <T> Set<T> emptyOrUnmodifiableSet(Set<T> set) {
-        if (set.isEmpty()) {
-            return Collections.emptySet();
-        } else if (set.size() == 1) {
-            return Collections.singleton(set.iterator().next());
-        } else {
-            return Collections.unmodifiableSet(set);
-        }
-    }
-
     private static String packageName(String cn) {
         int index = cn.lastIndexOf('.');
         return (index == -1) ? "" : cn.substring(0, index);
@@ -2653,8 +2589,8 @@ public class ModuleDescriptor
          * Setup the shared secret to allow code in other packages access
          * private package methods in java.lang.module.
          */
-        jdk.internal.misc.SharedSecrets
-            .setJavaLangModuleAccess(new jdk.internal.misc.JavaLangModuleAccess() {
+        jdk.internal.access.SharedSecrets
+            .setJavaLangModuleAccess(new jdk.internal.access.JavaLangModuleAccess() {
                 @Override
                 public Builder newModuleBuilder(String mn,
                                                 boolean strict,
@@ -2682,7 +2618,7 @@ public class ModuleDescriptor
 
                 @Override
                 public Exports newExports(Set<Exports.Modifier> ms, String source) {
-                    return new Exports(ms, source, Collections.emptySet(), true);
+                    return new Exports(ms, source, Set.of(), true);
                 }
 
                 @Override
@@ -2701,7 +2637,7 @@ public class ModuleDescriptor
 
                 @Override
                 public Opens newOpens(Set<Opens.Modifier> ms, String source) {
-                    return new Opens(ms, source, Collections.emptySet(), true);
+                    return new Opens(ms, source, Set.of(), true);
                 }
 
                 @Override
