@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,10 +23,14 @@
 
 package vm.mlvm.anonloader.share;
 
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodHandles.Lookup;
+
 import java.io.File;
 import java.util.Objects;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import nsk.share.test.Stresser;
 import vm.share.options.Option;
@@ -49,7 +53,7 @@ import vm.share.UnsafeAccess;
  * and loads it into JVM using either:
  * <ul>
  *    <li>a custom {@link java.lang.ClassLoader} implementation or
- *    <li>{@link sun.misc.Unsafe#defineAnonymousClass} call.
+ *    <li>{@link java.lang.invoke.MethodHandles.Lookup#defineHiddenClass} call.
  * </ul>
  *
  * <p>Loading is done in a separate thread. If this thread is stuck,
@@ -66,16 +70,10 @@ import vm.share.UnsafeAccess;
  * Class saving is controlled by -saveClassFile option.
  * A prefix can be added to the file name using {@link #setFileNamePrefix}
  * function.
- *
- * <p>There is a tool to load the saved .class file.
- * The tool tries to load class using a number of class loaders. For more
- * information, please see tool documentation: {@link vm.mlvm.tools.LoadClass}.
- *
- * @see vm.mlvm.tools.LoadClass
  */
 public abstract class StressClassLoadingTest extends MlvmTest {
     private static final String RESCUE_FILE_NAME = "_AnonkTestee01.class";
-    private static final String HUNG_CLASS_FILE_NAME = "hang%02d.class";
+    private static final String HUNG_CLASS_FILE_NAME = "hang.class";
 
     @Option(name = "iterations", default_value = "100000",
             description = "How many times generate a class and parse it")
@@ -91,12 +89,9 @@ public abstract class StressClassLoadingTest extends MlvmTest {
                     + " thread. The parser thread is killed after the timeout")
     private static int parseTimeout;
 
-    @Option(name = "unsafeLoad", default_value = "false",
-            description = "An option for adhoc experiments: load class via "
-                    + "Unsafe.defineAnonymousClass(). Since in this way the "
-                    + "loading process skips several security checks, if the "
-                    + "class is not valid, crashes and assertions are normal.")
-    private static boolean unsafeLoad;
+    @Option(name = "hiddenLoad", default_value = "false",
+            description = "An option for adhoc experiments: load class as a hidden class.")
+    private static boolean hiddenLoad;
 
     private String fileNamePrefix = "";
 
@@ -124,7 +119,7 @@ public abstract class StressClassLoadingTest extends MlvmTest {
                     optionsSetup = true;
 
                     Env.traceNormal("StressClassLoadingTest options: iterations: " + iterations);
-                    Env.traceNormal("StressClassLoadingTest options: unsafeLoad: " + unsafeLoad);
+                    Env.traceNormal("StressClassLoadingTest options: hiddenLoad: " + hiddenLoad);
                     Env.traceNormal("StressClassLoadingTest options: parseTimeout: " + parseTimeout);
                     Env.traceNormal("StressClassLoadingTest options: saveClassFile: " + saveClassFile);
                 }
@@ -134,8 +129,6 @@ public abstract class StressClassLoadingTest extends MlvmTest {
 
     public boolean run() throws Exception {
         setupOptions(this);
-
-        int hangNum = 0;
 
         Stresser stresser = createStresser();
         stresser.start(iterations);
@@ -163,52 +156,54 @@ public abstract class StressClassLoadingTest extends MlvmTest {
                 public void run() {
                     try {
                         Class<?> c;
-                        if (unsafeLoad) {
-                            c = UnsafeAccess.unsafe.defineAnonymousClass(hostClass, classBytes, null);
+                        if (hiddenLoad) {
+                            Lookup lookup = MethodHandles.lookup();
+                            c = lookup.defineHiddenClass(classBytes, true).lookupClass();
+
                         } else {
                             c = CustomClassLoaders.makeClassBytesLoader(classBytes, className)
                                     .loadClass(className);
                         }
-                        c.newInstance();
+                        UnsafeAccess.unsafe.ensureClassInitialized(c);
                     } catch (Throwable e) {
                         Env.traceVerbose(e, "parser caught exception");
                     }
                 }
             };
 
-            parserThread.setDaemon(true);
             parserThread.start();
             parserThread.join(parseTimeout);
 
             if (parserThread.isAlive()) {
-                Env.complain("Killing parser thread");
+                Env.traceImportant("parser thread may be hung!");
                 StackTraceElement[] stack = parserThread.getStackTrace();
+                Env.traceImportant("parser thread stack len: " + stack.length);
                 Env.traceImportant(parserThread + " stack trace:");
                 for (int i = 0; i < stack.length; ++i) {
                     Env.traceImportant(parserThread + "\tat " + stack[i]);
                 }
 
+                Path savedClassPath = Paths.get(fileNamePrefix + HUNG_CLASS_FILE_NAME);
+
                 if (saveClassFile) {
-                    Files.move(rescueFile.toPath(), Paths.get(fileNamePrefix
-                            + String.format(HUNG_CLASS_FILE_NAME, hangNum)));
+                    Files.move(rescueFile.toPath(), savedClassPath);
+                    Env.traceImportant("There was a possible hangup during parsing."
+                        + " The class file, which produced the possible hangup, was saved as "
+                        + fileNamePrefix + HUNG_CLASS_FILE_NAME
+                        + "... in the test directory. You may want to analyse it "
+                        + "if this test times out.");
                 }
-                ++hangNum;
+
+                parserThread.join(); // Wait until either thread finishes or test times out.
+                if (saveClassFile) {
+                    savedClassPath.toFile().delete();
+                }
             } else if (saveClassFile) {
                 rescueFile.delete();
             }
         }
 
         stresser.finish();
-
-        if (hangNum > 0) {
-            Env.complain("There were " + hangNum + " hangups during parsing."
-                    + " The class files, which produced hangup were saved as "
-                    + fileNamePrefix + String.format(HUNG_CLASS_FILE_NAME, 0)
-                    + "... in the test directory. You may want to analyse them."
-                    + " Failing this test because of hangups.");
-            return false;
-        }
-
         return true;
     }
 
