@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,9 +22,9 @@
  */
 
 /* @test
- * @bug 8196830
+ * @bug 8196830 8235351
  * @modules java.base/jdk.internal.reflect
- * @run testng/othervm --illegal-access=deny CallerSensitiveAccess
+ * @run testng/othervm CallerSensitiveAccess
  * @summary Check Lookup findVirtual, findStatic and unreflect behavior with
  *          caller sensitive methods with focus on AccessibleObject.setAccessible
  */
@@ -95,6 +95,58 @@ public class CallerSensitiveAccess {
         MethodHandles.publicLookup().unreflect(method);
     }
 
+    /**
+     * public accessible caller sensitive methods in APIs exported by java.base.
+     */
+    @DataProvider(name = "accessibleCallerSensitiveMethods")
+    static Object[][] accessibleCallerSensitiveMethods() {
+        return callerSensitiveMethods(Object.class.getModule())
+                .filter(m -> Modifier.isPublic(m.getModifiers()))
+                .map(m -> { m.setAccessible(true); return m; })
+                .map(m -> new Object[] { m, shortDescription(m) })
+                .toArray(Object[][]::new);
+    }
+
+    /**
+     * Using publicLookup, attempt to use unreflect to obtain a method handle to a
+     * caller sensitive method.
+     */
+    @Test(dataProvider = "accessibleCallerSensitiveMethods",
+            expectedExceptions = IllegalAccessException.class)
+    public void testLookupUnreflect(@NoInjection Method method, String desc) throws Exception {
+        MethodHandles.publicLookup().unreflect(method);
+    }
+
+    /**
+     * Using a Lookup with no original access that can't lookup caller-sensitive
+     * method
+     */
+    @Test(dataProvider = "callerSensitiveMethods",
+            expectedExceptions = IllegalAccessException.class)
+    public void testLookupNoOriginalAccessFind(@NoInjection Method method, String desc) throws Exception {
+        Lookup lookup = MethodHandles.lookup().dropLookupMode(Lookup.ORIGINAL);
+        assertTrue(lookup.hasFullPrivilegeAccess());
+        Class<?> refc = method.getDeclaringClass();
+        String name = method.getName();
+        MethodType mt = MethodType.methodType(method.getReturnType(), method.getParameterTypes());
+        if (Modifier.isStatic(method.getModifiers())) {
+            lookup.findStatic(refc, name, mt);
+        } else {
+            lookup.findVirtual(refc, name, mt);
+        }
+    }
+
+    /**
+     * Using a Lookup with no original access that can't unreflect caller-sensitive
+     * method
+     */
+    @Test(dataProvider = "callerSensitiveMethods",
+            expectedExceptions = IllegalAccessException.class)
+    public void testLookupNoOriginalAccessUnreflect(@NoInjection Method method, String desc) throws Exception {
+        Lookup lookup = MethodHandles.lookup().dropLookupMode(Lookup.ORIGINAL);
+        assertTrue(lookup.hasFullPrivilegeAccess());
+        lookup.unreflect(method);
+    }
 
     // -- Test method handles to setAccessible --
 
